--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="../src/Images/pokeball.png" />
+		<link rel="icon" href="./favicon.png" />
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -13,13 +13,12 @@
 			name="description"
 			content="Web site created using create-react-app"
 		/>
-		<link rel="apple-touch-icon" href="../src/Images/pokeball.png" />
+		<link rel="apple-touch-icon" href="./apple-touch-icon.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Pokédex</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		-->
 	</body>
 </html>
